# gTile

./: .bazelrc  .editorconfig  .gitignore  .npmrc  .travis.yml  BUILD.bazel  CHANGELOG.md  DEVELOPING.md  LICENSE  MODULE.bazel  Makefile  README  README.md  THEMING.md  WORKSPACE  WORKSPACE.bzlmod  app.js  app.ts  concat.sh  entry.ts  execute.bzl  extension.js  extension_test.js  gnome-shell.d.ts  gnometypes.ts  hotkeys.js  hotkeys.ts  install-extension.sh  logging.js  logging.ts  makefile.am  metadata.json  org.gnome.shell.extensions.gTile.xml  pack.sh  package-lock.json  package.json  pnpm-lock.yaml  polyfill.js  prefs.js  preset_parser.ts  (+23 more)
.buildkite/: pipeline.yml
.github/workflows/: github-actions-demo.yaml  pr-check.yml  release.yml
images/: auto-generate.sh
schemas/: BUILD.bazel  README.md  extract_settings_type_definition.ts  gschemas.compiled  org.gnome.shell.extensions.gtile.gschema.xml
src/: extension.ts  prefs.ts
src/core/: App.ts  DesktopManager.ts  HotkeyManager.ts  OverlayManager.ts  UserPreferences.ts
src/types/: desktop.ts  grid.ts  hotkeys.ts  observable.ts  overlay.ts  settings.ts  theme.ts  tree.ts
src/ui/: Overlay.ts  PanelButton.ts  Preview.ts
src/ui/overlay/: ButtonBar.ts  Container.ts  Grid.ts  IconButton.ts  TextButton.ts  TitleBar.ts
src/util/: ThemeStore.ts  gc.ts  grid.ts  parser.ts  scanner.ts  theme.ts  tile.ts  tree.ts  volatile.ts
test/: ResizePresetListParser.ts  Scanner.ts
test/helpers/: index.ts
test/snapshots/: ResizePresetListParser.ts.md  ResizePresetListParser.ts.snap
tools/: print-logs.sh
