module(
    name = "gtile",
    version = "50.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.6")

# 1. The metadata of glog is fetched from the BCR, including its dependencies (gflags).
# 2. The `repo_name` attribute allows users to reference this dependency via the `com_github_google_glog` repo name.
bazel_dep(name = "glog", version = "0.5.0", repo_name = "com_github_google_glog")

bazel_dep(name = "rules_nodejs", version = "5.5.3")
bazel_dep(name = "aspect_rules_js", version = "1.14.0")
bazel_dep(name = "aspect_bazel_lib", version = "1.21.4")

git_override(
    module_name = "aspect_rules_js",
    commit = "850cb49c8649e463b80ef7984e7c744279746170",
    remote = "https://github.com/aspect-build/rules_js.git",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

pnpm.pnpm(
    name = "gtile_pnpm",
)

use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

# https://github.com/aspect-build/rules_ts
bazel_dep(name = "aspect_rules_ts", version = "1.0.5")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

use_repo(rules_ts_ext, "npm_google_protobuf")

use_repo(rules_ts_ext, "npm_at_bazel_worker")
